--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>idk, dragons?</h1>
+    <h2>wait, what am i even doing?</h2>
     <a href="progress.html">progress page</a>
 </body>
 </html>
