--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>idk, dragons?</h1>
     <h2>wait, what am i even doing?</h2>
+    h3 (background color: green)
     <a href="progress.html">progress page</a>
 </body>
 </html>
