--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 <body>
     <h1>idk, dragons?</h1>
     <h2>wait, what am i even doing?</h2>
-
+<style>
+    h1, h2 {
+        text-align:center;
+    }
+</style>
     <a href="progress.html">progress page</a>
 </body>
 </html>
