--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h3>sirocco bengal</h3>
     <h4>I NEED COFFEE!!!!!!</h4>
     <h5>i ate too many animal crackers... bleh</h5>
-    <h6>DAY 2</h6>
+    <h6><strong>DAY 2</strong></h6>
     <a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/learn-basic-css-by-building-a-cafe-menu/step-16">progress page</a>
 </body>
 </html>
