--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>idk, dragons?</h1>
     <h2>wait, what am i even doing?</h2>
+    <h3>why is my font getting smaller???</h3>
     <h4>I NEED COFFEE!!!!!!</h4>
     <h5>i ate too many animal crackers... bleh</h5>
     <h6><strong>DAY 3</strong></h6>
