--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <h5>i ate too many animal crackers... bleh</h5>
     <h6><strong>DAY 3</strong></h6>
     <a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/learn-basic-css-by-building-a-cafe-menu/step-16">progress page</a>
+    <a href="https://dinoswords.gg/">Dino Game</a>
 </body>
 </html>
