--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <h3>why is my font getting smaller</h3>
     <h4>I NEED COFFEE!!!!!!</h4>
     <h5>i ate too many animal crackers... bleh</h5>
-    <h6><strong>DAY 3</strong></h6>
+    DAY 3
     <a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/learn-basic-css-by-building-a-cafe-menu/step-49">progress page</a>
 
-    <a href="https://dinoswords.gg/">Dino Game</a>
+    <h6><a href="https://dinoswords.gg/">Dino Game</a></h6>
 </body>
 </html>
