--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Lilah Hughes</title>
 </head>
 <body>
+    GreEEtIngS EarThLinGSSsS
     <h1>idk, dragons?</h1>
     <h2>wait, what am i even doing?</h2>
     <h3>why is my font getting smaller</h3>
@@ -13,7 +14,7 @@
     <h5>i ate too many animal crackers... bleh</h5>
     DAY 4
     <a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/learn-basic-css-by-building-a-cafe-menu/step-49">progress page</a>
-
+<body style="background-color: #FF474C;"> 
     <h6><a href="https://dinoswords.gg/">Dino Game</a></h6>
 </body>
 </html>
