--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h5>i ate too many animal crackers... bleh</h5>
     DAY 4
     <a href="https://www.freecodecamp.org/learn/javascript-algorithms-and-data-structures-v8/learn-introductory-javascript-by-building-a-pyramid-generator/step-12">progress page</a>
-<body style="background-color: #FF474C;"> 
+<body style="background-color: #5b96f5;"> 
     <h6><a href="https://dinoswords.gg/">Dino Game</a></h6>
 </body>
 </html>
